01_introduction/templating/kustomize/kubernetes/base/traefik-stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ocr
spec:
  stripPrefix:
    prefixes:
      - "/extract"
    forceSlash: false
