01_introduction/templating/kustomize/kubernetes/base/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocr
  labels:
    app: ocr
    tier: backend
  annotations:
    prometheus.io/scrape: "false"
    prometheus.io/scheme: "http"
    prometheus.io/path: "metrics"
    prometheus.io/port: "80"
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    name: ocr
