01_introduction/templating/kustomize/kubernetes/base/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocr-ing
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-ocr@kubernetescrd
spec:
  rules:
  - host: <HOST>
    http:
      paths:
        - path: /extract
          pathType: Prefix
          backend:
            service:
              name: ocr
              port:
                number: 80
